Fixed some UI issues on dashboard (NO reload on tab change bc bad router nesting) Added HEALTH POST endpoints and direct telemetry logic via API call. Makes more sense than uploading a trail of health checks; the logic is "If health doesnt get there instantyl, there is something wrong, be it connection or a real issue"
